<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">AndroidExamples</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_dialog">Dialog</string>
    <string name="fragment">Fragment</string>
    <string name="dialog">Dialog</string>
    <string name="title_activity_fragment">Fragment</string>
    <string name="title_activity_janus">JanusActivity</string>
    <string name="firstName">First Name:</string>
    <string name="lastName">Last Name:</string>
    <string name="phone">Phone:</string>
    <string name="email">Email</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_body">BodyActivity</string>
    <string name="call">Call</string>
    <string name="clear">Clear</string>
    <string name="tryWith">Try with</string>
    <string name="title_activity_dialog_choice">DialogChoiceActivity</string>
    <string name="multichoiceDialog">Multichoice Dialog</string>
    <string name="multichoiceDialogExample">Multichoice Dialog Example</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="cancel">Cancel</string>
    <string name="errorCreatingContact">Error Creating Contact</string>
    <string name="youSelected">You selected</string>
    <string name="noItemSelected">No item selected</string>
    <string name="title_activity_storage_and_theme">StorageAndTheme</string>
    <string name="save">Save</string>
    <string name="load">Load</string>
    <string name="textSaved">Text saved</string>
    <string name="fileLoaded">File loaded</string>
    <string name="errorSaveingText">Error saving taxt on internal storage</string>
    <string name="error">Error</string>
    <string name="errorLoadingFile">Error loading file from internal storage</string>
    <string name="saveAsFileDialogMessage">Insert the name of the file to save</string>
    <string name="saveAs">Save As</string>
    <string name="selectFile">Select a file to open</string>
    <string name="warning">Warning</string>
    <string name="SetDifferentFileName">Set different file name</string>
    <string name="storageAndTheme">Storage and Theme</string>
    <string name="noFileLoaded">No file loaded</string>
    <string name="noFileToLoad">No file to load</string>
    <string name="ok">OK</string>
    <string name="manage">Manage</string>
    <string name="title_activity_manage_file">ManageFileActivity</string>
    <string name="delete">Delete</string>
    <string name="rename">rename</string>
    <string name="selectAll">Select all</string>
    <string name="confirmDeleteFile">Are you sure to delete</string>
    <string name="and">and</string>
    <string name="FileOverwritingConfirmation">The file already exists. Do you want to overwrite it?</string>
    <string name="action_settings">Settings</string>
    <string name="sqlite">Sqlite</string>
    <string name="contacts">Contacts</string>
    <string name="searchContacts">Search contacts</string>
    <string name="search">Search</string>
    <string name="noDataLoaded">No data loaded</string>
    <string name="map">Map</string>
    <string name="trackMyPosition">Track my position</string>
    <string name="myDistance">My distance</string>
    <string name="travvelledDistance">Distance: </string>
    
</resources>